fix: unexpected exception while reading/transferring multiple flowfiles